2009-07-12  Allan McRae <allan@archlinux.org>
	* sudo-1.7.2-1
	* upstream update
	* remove patch included upstream

2009-06-06  Allan McRae <allan@archlinux.org>
	* sudo-1.7.1-2
	* fix segfault in setenv function (FS#14464)

2009-04-19  Allan McRae <allan@archlinux.org>
	* sudo-1.7.1-1
	* upstream update

2008-12-20  Allan McRae <allan@archlinux.org>
	* sudo-1.7.0-1
	* upstream update to new major version