@@ -3,7 +3,7 @@
 # Contributor: Tom Newsom <Jeepster@gmx.co.uk>
 
 pkgname=sudo
-pkgver=1.7.2
+pkgver=1.7.2p1
 pkgrel=1
 pkgdesc="Give certain users the ability to run some commands as root"
 arch=('i686' 'x86_64')
@@ -13,8 +13,8 @@ depends=('glibc' 'pam')
 backup=('etc/sudoers' 'etc/pam.d/sudo')
 source=(ftp://ftp.sudo.ws/pub/sudo/$pkgname-$pkgver.tar.gz 
         sudo.pam)
-options=('!libtool' '!makeflags')
-md5sums=('9caba8719c3e0f163880a05f02a48249'
+options=('!libtool' '!makeflags' 'force')
+md5sums=('4449d466a774f5ce401c9c0e3866c026'
          '4e7ad4ec8f2fe6a40e12bcb2c0b256e3')
 
 build() {
